// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WebRegistrationFinishService finishRegistration() derives the master key and registers the user 1`] = `
RegisterFinishRequest {
  "acceptEmergencyAccessId": undefined,
  "acceptEmergencyAccessInviteToken": undefined,
  "email": "test@email.com",
  "emailVerificationToken": "emailVerificationToken",
  "masterPasswordAuthentication": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterPasswordAuthenticationHash": "authHash",
    "salt": "salt",
  },
  "masterPasswordHint": "newPasswordHint",
  "masterPasswordUnlock": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterKeyWrappedUserKey": "masterKeyWrappedUserKey",
    "salt": "salt",
  },
  "orgInviteToken": undefined,
  "orgSponsoredFreeFamilyPlanToken": undefined,
  "organizationUserId": undefined,
  "providerInviteToken": undefined,
  "providerUserId": undefined,
  "userAsymmetricKeys": KeysRequest {
    "encryptedPrivateKey": "privateKey",
    "publicKey": "publicKey",
  },
}
`;

exports[`WebRegistrationFinishService finishRegistration() it registers the user with org invite when given an org invite 1`] = `
RegisterFinishRequest {
  "acceptEmergencyAccessId": undefined,
  "acceptEmergencyAccessInviteToken": undefined,
  "email": "test@email.com",
  "emailVerificationToken": undefined,
  "masterPasswordAuthentication": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterPasswordAuthenticationHash": "authHash",
    "salt": "salt",
  },
  "masterPasswordHint": "newPasswordHint",
  "masterPasswordUnlock": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterKeyWrappedUserKey": "masterKeyWrappedUserKey",
    "salt": "salt",
  },
  "orgInviteToken": "orgInviteToken",
  "orgSponsoredFreeFamilyPlanToken": undefined,
  "organizationUserId": "organizationUserId",
  "providerInviteToken": undefined,
  "providerUserId": undefined,
  "userAsymmetricKeys": KeysRequest {
    "encryptedPrivateKey": "privateKey",
    "publicKey": "publicKey",
  },
}
`;

exports[`WebRegistrationFinishService finishRegistration() registers the user when given a provider invite token 1`] = `
RegisterFinishRequest {
  "acceptEmergencyAccessId": undefined,
  "acceptEmergencyAccessInviteToken": undefined,
  "email": "test@email.com",
  "emailVerificationToken": undefined,
  "masterPasswordAuthentication": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterPasswordAuthenticationHash": "authHash",
    "salt": "salt",
  },
  "masterPasswordHint": "newPasswordHint",
  "masterPasswordUnlock": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterKeyWrappedUserKey": "masterKeyWrappedUserKey",
    "salt": "salt",
  },
  "orgInviteToken": undefined,
  "orgSponsoredFreeFamilyPlanToken": undefined,
  "organizationUserId": undefined,
  "providerInviteToken": "providerInviteToken",
  "providerUserId": "providerUserId",
  "userAsymmetricKeys": KeysRequest {
    "encryptedPrivateKey": "privateKey",
    "publicKey": "publicKey",
  },
}
`;

exports[`WebRegistrationFinishService finishRegistration() registers the user when given an emergency access invite token 1`] = `
RegisterFinishRequest {
  "acceptEmergencyAccessId": "emergencyAccessId",
  "acceptEmergencyAccessInviteToken": "acceptEmergencyAccessInviteToken",
  "email": "test@email.com",
  "emailVerificationToken": undefined,
  "masterPasswordAuthentication": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterPasswordAuthenticationHash": "authHash",
    "salt": "salt",
  },
  "masterPasswordHint": "newPasswordHint",
  "masterPasswordUnlock": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterKeyWrappedUserKey": "masterKeyWrappedUserKey",
    "salt": "salt",
  },
  "orgInviteToken": undefined,
  "orgSponsoredFreeFamilyPlanToken": undefined,
  "organizationUserId": undefined,
  "providerInviteToken": undefined,
  "providerUserId": undefined,
  "userAsymmetricKeys": KeysRequest {
    "encryptedPrivateKey": "privateKey",
    "publicKey": "publicKey",
  },
}
`;

exports[`WebRegistrationFinishService finishRegistration() registers the user when given an org sponsored free family plan token 1`] = `
RegisterFinishRequest {
  "acceptEmergencyAccessId": undefined,
  "acceptEmergencyAccessInviteToken": undefined,
  "email": "test@email.com",
  "emailVerificationToken": undefined,
  "masterPasswordAuthentication": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterPasswordAuthenticationHash": "authHash",
    "salt": "salt",
  },
  "masterPasswordHint": "newPasswordHint",
  "masterPasswordUnlock": {
    "kdf": PBKDF2KdfConfig {
      "iterations": 600000,
      "kdfType": 0,
    },
    "masterKeyWrappedUserKey": "masterKeyWrappedUserKey",
    "salt": "salt",
  },
  "orgInviteToken": undefined,
  "orgSponsoredFreeFamilyPlanToken": "orgSponsoredFreeFamilyPlanToken",
  "organizationUserId": undefined,
  "providerInviteToken": undefined,
  "providerUserId": undefined,
  "userAsymmetricKeys": KeysRequest {
    "encryptedPrivateKey": "privateKey",
    "publicKey": "publicKey",
  },
}
`;
